examples/conformance/valid/valid_queue_without_policy.flo
spec_version: "0.1"

process:
  id: invalid_queue_missing_policy
  name: Invalid Queue Missing Policy

steps:
  - id: start
    kind: start

  - id: submit
    kind: task

  - id: review_queue
    kind: queue
    metadata:
      staff_role: supervisor
      buffer_capacity: 10
      wait_reason: pending_human_decision

  - id: decision
    kind: decision
    outcomes:
      yes: complete
      no: submit

  - id: complete
    kind: end

edges:
  - source: start
    target: submit
  - source: submit
    target: review_queue
  - source: review_queue
    target: decision
  - source: decision
    target: complete
    outcome: yes
  - source: decision
    target: submit
    outcome: no
